# radius-backend

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: default_config.yaml
data/sample/: synthetic_tip_calibration.json  synthetic_tip_ground_truth.csv
sem_analysis/: __init__.py  annotation.py  arch_detection.py  blade_value.py  cli.py  consensus_edges.py  contour_features.py  deduction.py  edge_detection.py  edge_geometry.py  edge_probability.py  pipeline.py  preprocessing.py  protocol.py  radius_computation.py  roi.py  shape_detection.py  stats_summary.py  tip_measurement.py  validation.py  whiteboard_geometry.py
sem_analysis/io/: image_loader.py
sem_analysis/methods/: __init__.py  brainstorming.py  fixed_distance_circle.py  inscribed_angle.py  local_contour.py  projected_tip_distance.py
sem_analysis/research/: __init__.py  contour_extraction.py  curvature.py  geometric_validation.py  line_fitting.py  osculating_tip.py
sem_analysis/utils/: sample_generator.py
tests/: test_arch_protocol.py  test_brainstorming.py  test_consensus_edges.py  test_physical_protocol.py  test_pipeline.py  test_research_grade.py
